update profile information

--- a/index.html
+++ b/index.html
@@ -1,1 +1,507 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8"><title>Quang Pham - Senior Frontend Developer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="theme-color" content="#ffffff">
+	<meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Quang Pham - Senior Frontend Developer">
+	<meta property="og:description" content="Quang Pham">
+	<meta property="og:url" content="http://quangnp0903.github.io/">
+	<meta property="og:site_name" content="Quang Pham">
+	<meta name="description" content="Senior Frontend Developer">
+	<meta name="keywords" content="quangnp0903, Quang Pham, Pham Ngoc Quang, sutrix, sutrixmedia, creative, agency, sutrixsolutions, web design, web development, mobile, applications, web service">
+	<link rel="stylesheet" href="./assets/libs.css">
+	<link rel="stylesheet" href="./assets/main.css">
+</head>
+<body>
+<noscript>
+	<div style="position: fixed; top: 0px; left: 0px; z-index: 99999; height: 100%; width: 100%; background-color: #FFFFFF;">Your browser does not support JavaScript!</div>
+</noscript>
+<main>
+	<section class="resume-screen">
+		<div class="container">
+			<div class="divider"></div>
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="box">
+						<h1 class="author">Quang Pham</h1>
+						<h4 class="job-title">Senior Frontend Developer
+							<a class="pull-right" href="http://quangnp0903.github.io/">
+								<small>
+									<u>online version</u>
+								</small>
+							</a>
+						</h4>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="box">
+						<ul class="fa-ul list-contact">
+							<li>
+								<i class="fa-li fa fa-lg fa-map-marker"></i>Ho Chi Minh city, Vietnam
+							</li>
+							<li>
+								<i class="fa-li fa fa-lg fa-mobile"></i>(+84) 984-042-696
+							</li>
+							<li>
+								<i class="fa-li fa fa-envelope-o"></i><a href="mailto:quangnp0903@gmail.com">quangnp0903@gmail.com</a>
+							</li>
+							<li>
+								<i class="fa-li fa fa-skype"></i>successful_qnp
+							</li>
+						</ul>
+						<div class="clearfix"></div>
+						<div class="msg">
+							<p>I am a web developer based in Ho Chi Minh city. If you feel interested in my little CV, please get in touch with me via email.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="box box-primary">
+						<h4 class="title">work experence</h4>
+						<ul class="column">
+							<li>
+								<div class="work-location">
+									<label>
+										<a href="http://vla.vn/">VLA JSC</a>
+									</label>
+									<span class="pull-right">
+										<i class="fa fa-calendar-o"></i> &nbsp; 2011-2012
+									</span>
+								</div>
+								<p class="work-title">- .NET Web Developer</p>
+							</li>
+							<li>
+								<div class="work-location">
+									<label>
+										<a href="http://sutrixgroup.com/">Sutrix Solutions</a>
+									</label>
+									<span class="pull-right">
+										<i class="fa fa-calendar-o"></i> &nbsp; 2013-now
+									</span>
+								</div>
+								<p class="work-title">- Frontend Team Leader</p>
+							</li>
+						</ul>
+					</div>
+					<div class="box box-danger">
+						<h4 class="title">featured projects</h4>
+						<ul class="column">
+							<li>
+								<div>
+									<label>
+										<a href="#">VLA JSC</a>
+									</label> .NET C#, MS SQL Server
+								</div>
+								<p class="work-title">- Participated in some web projects such as: VLA website, DienQuang Website, Author Management System of Vietnam Education Publishing House, Vietnam Education Publising House Website, E-commerce of Vietnam Education Publising House Website...</p>
+							</li>
+							<li>
+								<div>
+									<label>
+										<a href="#">Sutrix Solutions</a>
+									</label> HTML, CSS, Angularjs, Jquery
+								</div>
+								<p class="work-title">- Worked on some projects based or dedicated projects with big clients such as LinkByNet, Razorfish, 15 Green Leaves, Awakit, Digitas Lbi... as a Frontend developer, Frontend Team Leader</p>
+							</li>							
+						</ul>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="box box-success">
+						<h4 class="title">Work Methodology</h4>
+						<ul class="column">
+							<li>
+								<div class="method">
+									<span class="method-name">Version Control System</span>
+									<span class="method-value">
+										<i class="fa fa-git"></i>, svn
+									</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Code Hosting</span>
+									<span class="method-value">
+										<i class="fa fa-github"></i>,
+										<i class="fa fa-bitbucket"></i>
+									</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Agile management</span>
+									<span class="method-value">Scrum</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Live stream building</span>
+									<span class="method-value">Gulp, Grunt, Bower</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Unit Tests</span>
+									<span class="method-value">
+										<i class="fa fa-check"></i>
+									</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Issue Tracking Tool</span>
+									<span class="method-value">Jira</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Communication Tool</span>
+									<span class="method-value">
+										<i class="fa fa-skype"></i>
+										<i class="fa fa-slack"></i>
+									</span>
+								</div>
+							</li>
+						</ul>
+						<div class="clearfix"></div>
+					</div>
+					<div class="box box-flowed">
+						<h4 class="title">Soft skill</h4>
+						<ul class="column">
+							<li>
+								<div class="method">
+									<span class="method-name">Time Zone</span>
+									<span class="method-value">Asia (GMT+7)										
+									</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Languages</span>
+									<span class="method-value">English</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Code editor</span>
+									<span class="method-value">
+										<b class="danger">Sublime Text</b>
+									</span>
+								</div>
+							</li>
+							<li>
+								<div class="method">
+									<span class="method-name">Operating System</span>
+									<span class="method-value">
+										<i class="fa fa-windows"></i>
+									</span>
+								</div>
+							</li>						
+							<li>
+								<div class="method">
+									<span class="method-name">Office</span>
+									<span class="method-value">Microsoft Office (Word, PowerPoint, Excel); LibreOffice</span>
+								</div>
+							</li>							
+						</ul>
+						<div class="clearfix"></div>
+					</div>
+					<div class="box box-flowed">
+						<h4 class="title">Self</h4>
+						<ul class="column x3">
+							<li>
+								<i class="fa fa-coffee"></i> and code
+							</li>
+							<li>Sublime lover</li>
+							<li>JS lover</li>
+							<li>RegExp lover</li>							
+						</ul>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+			</div>
+			<div class="box box-info">
+				<h4 class="title">Technologies</h4>
+				<ul class="column x3">
+					<li>
+						<div class="method">
+							<span class="method-name">HTML5</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">CSS3</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">Jade</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">Less</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>					
+					<li>
+						<div class="method">
+							<span class="method-name">Bootstrap</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">.NET C#</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+				</ul>
+				<div class="divider divider-line"></div>
+				<ul class="column x3">
+					<li>
+						<div class="method">
+							<span class="method-name">Javascript</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">Angularjs</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">Jquery</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>					
+					<li>
+						<div class="method">
+							<span class="method-name">Gulp</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">Bower.io</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">Lodash</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>					
+				</ul>				
+				<div class="divider divider-line"></div>
+				<ul class="column x3">
+					<li>
+						<div class="method">
+							<span class="method-name">JSON</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">AJAX</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">SQL Server</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">SQLite</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+				</ul>
+				<div class="divider divider-line"></div>
+				<ul class="column x3">
+					<li>
+						<div class="method">
+							<span class="method-name">NodeJS</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">ExpressJS</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+				</ul>
+				<div class="divider divider-line"></div>
+				<ul class="column x3">
+					<li>
+						<div class="method">
+							<span class="method-name">Git</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">Agile/Scrum</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="box">
+				<h4 class="title">Other</h4>
+				<ul class="column x3">
+					<li>Good skill in English - TOEIC 770/990</li>
+					<li>Good logic and quick learning</li>
+					<li>Creative and “fastable” idea</li>
+					<li>Familiar with working in a 3-6 member team</li>
+					<li>High-focus in individual work</li>
+					<li>Good at presenting and writing</li>
+					<li>Good at problem solving</li>
+					<li>Ability to work directly with foreign clients</li>
+				</ul>
+			</div>
+			<div class="box footer">
+				<div class="copyright">
+					<p>Thanks for reading!</p>
+				</div>
+			</div>
+		</div>
+	</section>
+</main>
+</body>
+</html>
