--- a/index.html
+++ b/index.html
@@ -426,6 +426,18 @@
 							</span>
 						</div>
 					</li>
+					<li>
+						<div class="method">
+							<span class="method-name">Jasmine</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
 				</ul>
 				<div class="divider divider-line"></div>
 				<ul class="column x3">
