--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"><title>Quang Pham - Senior Frontend Developer</title>
+	<meta charset="utf-8"><title>Quang Pham - Software Engineer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="theme-color" content="#ffffff">
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Quang Pham - Senior Frontend Developer">
+	<meta property="og:title" content="Quang Pham - Software Engineer">
 	<meta property="og:description" content="Quang Pham">
 	<meta property="og:url" content="http://quangnp0903.github.io/">
 	<meta property="og:site_name" content="Quang Pham">
-	<meta name="description" content="Senior Frontend Developer">
-	<meta name="keywords" content="quangnp0903, Quang Pham, Pham Ngoc Quang, sutrix, sutrixmedia, creative, agency, sutrixsolutions, web design, web development, mobile, applications, web service">
+	<meta name="description" content="Software Engineer">
+	<meta name="keywords" content="quangnp0903, Quang Pham, Pham Ngoc Quang, sutrix, sutrixmedia, creative, agency, sutrixsolutions, web design, web development, mobile, applications, web service, absolute, absolute vietnam">
 	<link rel="stylesheet" href="./assets/libs.css">
 	<link rel="stylesheet" href="./assets/main.css">
 </head>
@@ -44,7 +44,7 @@
 								<i class="fa-li fa fa-lg fa-map-marker"></i>Ho Chi Minh city, Vietnam
 							</li>
 							<li>
-								<i class="fa-li fa fa-lg fa-mobile"></i>(+84) 984-042-696
+								<i class="fa-li fa fa-lg fa-mobile"></i>(+84) 984-042-696 - Zalo: 0973843375
 							</li>
 							<li>
 								<i class="fa-li fa fa-envelope-o"></i><a href="mailto:quangnp0903@gmail.com">quangnp0903@gmail.com</a>
@@ -82,10 +82,22 @@
 										<a href="http://sutrixgroup.com/">Sutrix Solutions</a>
 									</label>
 									<span class="pull-right">
-										<i class="fa fa-calendar-o"></i> &nbsp; 2013-now
+										<i class="fa fa-calendar-o"></i> &nbsp; 2013-2016
 									</span>
 								</div>
+								<p class="work-title">- Senior Frontend Developer</p>
 								<p class="work-title">- Frontend Team Leader</p>
+							</li>
+              <li>
+								<div class="work-location">
+									<label>
+										<a href="http://absolute.com/">Absolute Software Vietnam</a>
+									</label>
+									<span class="pull-right">
+										<i class="fa fa-calendar-o"></i> &nbsp; 2017-2022
+									</span>
+								</div>
+								<p class="work-title">- Software Engineer</p>
 							</li>
 						</ul>
 					</div>
@@ -107,6 +119,14 @@
 									</label> HTML, CSS, Angularjs, Jquery
 								</div>
 								<p class="work-title">- Worked on some projects based or dedicated projects with big clients such as LinkByNet, Razorfish, 15 Green Leaves, Awakit, Digitas Lbi... as a Frontend developer, Frontend Team Leader</p>
+							</li>
+              <li>
+								<div>
+									<label>
+										<a href="#">Absolute Software Vietnam</a>
+									</label> HTML, CSS, Javascript, Reactjs, Redux, Emberjs, Rest API
+								</div>
+								<p class="work-title">- Having experience working with Absolute Software Vietnam, a product-based company with head office located in Vancouver, providing security solutions for many big companies over the world, working as a software developer(UI/FE dev) at Absolute Console, a web-based app that helps user to control their devices and their related data as well</p>
 							</li>							
 						</ul>
 					</div>
@@ -141,7 +161,7 @@
 							<li>
 								<div class="method">
 									<span class="method-name">Live stream building</span>
-									<span class="method-value">Gulp, Grunt, Bower</span>
+									<span class="method-value">Gulp, Grunt, Bower, Webpack</span>
 								</div>
 							</li>
 							<li>
@@ -190,7 +210,9 @@
 								<div class="method">
 									<span class="method-name">Code editor</span>
 									<span class="method-value">
-										<b class="danger">Sublime Text</b>
+										<b class="danger">Sublime Text</b>,
+                    <b class="danger">Jetbrain Webstorm</b>,
+                    <b class="danger">MS VS Code</b>
 									</span>
 								</div>
 							</li>
@@ -235,7 +257,7 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-								<i class="fa fa-star-o"></i>
+								<i class="fa fa-star"></i>
 								<i class="fa fa-star-o"></i>
 							</span>
 						</div>
@@ -438,6 +460,18 @@
 							</span>
 						</div>
 					</li>
+          <li>
+						<div class="method">
+							<span class="method-name">Reactjs</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
 				</ul>
 				<div class="divider divider-line"></div>
 				<ul class="column x3">
@@ -465,6 +499,18 @@
 							</span>
 						</div>
 					</li>
+          <li>
+						<div class="method">
+							<span class="method-name">Redux</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star-o"></i>
+							</span>
+						</div>
+					</li>
 				</ul>
 				<div class="divider divider-line"></div>
 				<ul class="column x3">
@@ -483,6 +529,18 @@
 					<li>
 						<div class="method">
 							<span class="method-name">Agile/Scrum</span>
+							<span class="method-value">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</span>
+						</div>
+					</li>
+          <li>
+						<div class="method">
+							<span class="method-name">Emberjs</span>
 							<span class="method-value">
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
